images not showing bugfix

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header class="header">
         <div class="header__container">
-            <a class="header__logo" href="#"><img src="/img/logo.svg" alt=""></a>
+            <a class="header__logo" href="#"><img src="img/logo.svg" alt=""></a>
             <nav class="header__menu">
                 <ul class="header__menu-ul">
                     <li class="header__menu-li"><a href="#">Home</a></li>
@@ -26,16 +26,16 @@
             </nav>
             <div class="header__socials">
                 <div class="header__img">
-                    <img src="/img/icons/linkedin.svg" alt="">
+                    <img src="img/icons/linkedin.svg" alt="">
                 </div>
                 <div class="header__img">
-                    <img src="/img/icons/youtube.svg" alt="">
+                    <img src="img/icons/youtube.svg" alt="">
                 </div>
                 <div class="header__img">
-                    <img src="/img/icons/faceboock.svg" alt="">
+                    <img src="img/icons/faceboock.svg" alt="">
                 </div>
                 <div class="header__img">
-                    <img src="/img/icons/cosial_04.svg" alt="">
+                    <img src="img/icons/cosial_04.svg" alt="">
                 </div>
             </div>
             <lable class="header__burger">
@@ -56,55 +56,55 @@
             <div class="gallery__container slider">
                 <div class="gallery__images slide">
                     <label class="gallery__item">
-                        <img src="/img/slider/01.png" alt="">
+                        <img src="img/slider/01.png" alt="">
                         <input type="radio" name="slide" id="">
                     </label >
                     <label class="gallery__item">
-                        <img src="/img/slider/02.png" alt="">
+                        <img src="img/slider/02.png" alt="">
                         <input type="radio" name="slide" id="">
                     </label >
                     <label class="gallery__item">
-                        <img src="/img/slider/03.png" alt="">
+                        <img src="img/slider/03.png" alt="">
                         <input type="radio" name="slide" id="">
                     </label >
                     <label class="gallery__item">
-                        <img src="/img/slider/04.png" alt="">
+                        <img src="img/slider/04.png" alt="">
                         <input type="radio" name="slide" id="">
                     </label >
                     <label class="gallery__item">
-                        <img src="/img/slider/05.png" alt="">
+                        <img src="img/slider/05.png" alt="">
                         <input type="radio" name="slide" id="">
                     </label >
                     <label class="gallery__item">
-                        <img src="/img/slider/06.png" alt="">
+                        <img src="img/slider/06.png" alt="">
                         <input type="radio" name="slide" id="">
                     </label >
                     <label class="gallery__item">
-                        <img src="/img/slider/07.png" alt="">
+                        <img src="img/slider/07.png" alt="">
                         <input type="radio" name="slide" id="">
                     </label >
                     <label class="gallery__item">
-                        <img src="/img/slider/08.png" alt="">
+                        <img src="img/slider/08.png" alt="">
                         <input type="radio" name="slide" id="" checked>
                     </label >
                     <label class="gallery__item">
-                        <img src="/img/slider/09.png" alt="">
+                        <img src="img/slider/09.png" alt="">
                         <input type="radio" name="slide" id="">
                     </label >
                     <label class="gallery__item">
-                        <img src="/img/slider/10.png" alt="">
+                        <img src="img/slider/10.png" alt="">
                         <input type="radio" name="slide" id="">
                     </label >
                     <label class="gallery__item">
-                        <img src="/img/slider/11.png" alt="">
+                        <img src="img/slider/11.png" alt="">
                         <input type="radio" name="slide" id="">
                     </label >
                     <label class="gallery__item">
-                        <img src="/img/slider/12.png" alt="">
+                        <img src="img/slider/12.png" alt="">
                         <input type="radio" name="slide" id="">
                     </label >
                     <label class="gallery__item">
-                        <img src="/img/slider/13.png" alt="">
+                        <img src="img/slider/13.png" alt="">
                         <input type="radio" name="slide" id="">
                     </label >
                 </div>
@@ -137,7 +137,7 @@
             <div class="articles__container">
                 <div class="articles__article">
                     <picture class="articles__picture">
-                        <img src="/img/article_01.png" alt="image">
+                        <img src="img/article_01.png" alt="image">
                     </picture>
                     <div class="articles__items">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit duis nec urna ut.</p>
@@ -148,7 +148,7 @@
                 </div>
                 <div class="articles__article">
                     <picture class="articles__picture">
-                        <img src="/img/article_02.png" alt="image">
+                        <img src="img/article_02.png" alt="image">
                     </picture>
                     <div class="articles__items">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit duis nec urna ut.</p>
@@ -159,7 +159,7 @@
                 </div>
                 <div class="articles__article">
                     <picture class="articles__picture">
-                        <img src="/img/article_03.png" alt="image">
+                        <img src="img/article_03.png" alt="image">
                     </picture>
                     <div class="articles__items">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit duis nec urna ut.</p>
@@ -170,7 +170,7 @@
                 </div>
                 <div class="articles__article">
                     <picture class="articles__picture">
-                        <img src="/img/article_04.png" alt="image">
+                        <img src="img/article_04.png" alt="image">
                     </picture>
                     <div class="articles__items">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit duis nec urna ut.</p>
@@ -190,7 +190,7 @@
             <div class="articles__container">
                 <div class="articles__article">
                     <picture class="articles__picture">
-                        <img src="/img/article_05.png" alt="image">
+                        <img src="img/article_05.png" alt="image">
                     </picture>
                     <div class="articles__items">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit duis nec urna ut.</p>
@@ -201,7 +201,7 @@
                 </div>
                 <div class="articles__article">
                     <picture class="articles__picture">
-                        <img src="/img/article_06.png" alt="image">
+                        <img src="img/article_06.png" alt="image">
                     </picture>
                     <div class="articles__items">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit duis nec urna ut.</p>
@@ -212,7 +212,7 @@
                 </div>
                 <div class="articles__article">
                     <picture class="articles__picture">
-                        <img src="/img/article_07.png" alt="image">
+                        <img src="img/article_07.png" alt="image">
                     </picture>
                     <div class="articles__items">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit duis nec urna ut.</p>
@@ -230,7 +230,7 @@
                     <p>Only trained guys work in our team. They will save you the hassle of your farm.</p>
                 </div>
                 <div class="our-team__photo">
-                    <img src="/img/our-team-photo.png" alt="photo">
+                    <img src="img/our-team-photo.png" alt="photo">
                 </div>
             </div>
             <div class="our-team__back">
@@ -253,16 +253,16 @@
                     <h3 class="footer__rtitle">Leave a request and we will contact you!</h3>
                     <div class="footer__socials">
                         <div class="footer__img">
-                            <img src="/img/icons/f-linkedin.svg" alt="">
+                            <img src="img/icons/f-linkedin.svg" alt="">
                         </div>
                         <div class="footer__img">
-                            <img src="/img/icons/f-youtube.svg" alt="">
+                            <img src="img/icons/f-youtube.svg" alt="">
                         </div>
                         <div class="footer__img">
-                            <img src="/img/icons/f-faceboock.svg" alt="">
+                            <img src="img/icons/f-faceboock.svg" alt="">
                         </div>
                         <div class="footer__img">
-                            <img src="/img/icons/f-cosial_04.svg" alt="">
+                            <img src="img/icons/f-cosial_04.svg" alt="">
                         </div>
                     </div>
                 </div>
